force-app/main/default/objects/Product2/fields/Allowed_absences__c.field-meta.xml
<CustomField>
    <fullName>Allowed_absences__c</fullName>
    <label>Allowed absences</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>