force-app/main/default/objects/Product2/fields/Certification_Course__c.field-meta.xml
<CustomField>
    <fullName>Certification_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certification Course</label>
    <type>Checkbox</type>
</CustomField>