force-app/main/default/objects/Product2/fields/Course_hours__c.field-meta.xml
<CustomField>
    <fullName>Course_hours__c</fullName>
    <label>Course hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>