force-app/main/default/objects/Product2/fields/Digital_Literacy_Course__c.field-meta.xml
<CustomField>
    <fullName>Digital_Literacy_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Literacy Course</label>
    <type>Checkbox</type>
</CustomField>