force-app/main/default/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>If(Name == &apos;PC for Beginners&apos; || Name == &apos;Office Track&apos;, &apos;Digital Literacy&apos;, &apos;Certification&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>